--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="landscape"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +30,7 @@
                 android:value="" />
         </activity>
 
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".SecondActivity" android:screenOrientation="landscape" />
 
     </application>
 </manifest>
